objects/Agreement_Party__c.object
<CustomObject>
    <fields>
        <fullName>Agreement_Party_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Party Name</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Agreement Parties</relationshipLabel>
        <relationshipName>Agreement_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Agreement Parties</relationshipLabel>
        <relationshipName>Agreement_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Person Procuring Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Agreement Party</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Agreement Party Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>